--- a/packages/database/.env
+++ b/packages/database/.env
@@ -6,3 +6,4 @@ DATABASE_URL="postgresql://postgres.hsleadkzyyhrrhcpspyh:finpro2024@aws-0-ap-sou
 # Direct connection to the database. Used for migrations.
 DIRECT_URL="postgresql://postgres.hsleadkzyyhrrhcpspyh:finpro2024@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
         
+OPEN_CAGE_API_KEY = 89dd7f045f414b5aa2ff3ee9b18a4c47
