--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "name": "with-prisma",
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "latest",
+    "next-auth": "^5.0.0-beta.25",
     "react-icons": "^5.4.0"
   },
   "packageManager": "npm@10.8.3",
