--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "name": "with-prisma",
   "dependencies": {
     "@prisma/client": "latest",
+    "axios": "^1.7.9",
     "react-icons": "^5.4.0"
   },
   "packageManager": "npm@10.8.3",
