--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@prisma/client": "latest",
     "axios": "^1.7.9",
     "next-auth": "^5.0.0-beta.25",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "zod": "^3.24.2"
   },
   "packageManager": "npm@10.8.3",
   "workspaces": [
