--- a/packages/database/.env
+++ b/packages/database/.env
@@ -7,3 +7,7 @@ DATABASE_URL="postgresql://postgres.hsleadkzyyhrrhcpspyh:finpro2024@aws-0-ap-sou
 DIRECT_URL="postgresql://postgres.hsleadkzyyhrrhcpspyh:finpro2024@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
         
 OPEN_CAGE_API_KEY = 89dd7f045f414b5aa2ff3ee9b18a4c47
+
+CLOUDINARY_CLOUD_NAME=dk2sik7oi
+CLOUDINARY_API_KEY=185537156573628
+CLOUDINARY_API_SECRET=jin_Y3euY4cqJDR1I51mya6KNH4
