--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,12 +12,14 @@
   "description": "",
   "dependencies": {
     "@types/multer": "^1.4.12",
+    "@types/node-cron": "^3.0.11",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0"
   },
   "devDependencies": {
