--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,7 +40,9 @@
     "redux-state-sync": "^3.1.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "@auth/prisma-adapter": "^2.7.4",
+    "next-auth": "^5.0.0-beta.25"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
