--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "start": "nodemon src/index.ts",
+    "start": "node dist/apps/backend/src/index.js",
     "build": "tsc",
     "postinstall": "prisma generate"
   },
