--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,8 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
     "start": "node dist/apps/backend/src/index.js",
-    "build": "tsc",
-    "postinstall": "prisma generate"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "prisma": "^6.4.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
