--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "latest",
     "axios": "^1.7.9",
+    "cloudinary": "^2.5.1",
     "next-auth": "^5.0.0-beta.25",
     "react-icons": "^5.4.0",
     "zod": "^3.24.2"
