--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,8 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
     "start": "node dist/index.js",
-    "build": "tsc && tsc-alias",
-    "postinstall": "prisma generate"
+    "build": "tsc && tsc-alias"
   },
   "keywords": [],
   "author": "",
