--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -12,6 +12,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "**/*.d.ts", "src/**/*"],
   "exclude": ["node_modules"]
 }
