--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
     "start": "node dist/index.js",
-    "build": "tsc && tsc-alias"
+    "build": "tsc && tsc-alias",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +25,8 @@
     "nodemailer": "^6.10.0",
     "prisma": "^6.4.1",
     "tsc-alias": "^1.8.11",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "@prisma/client": "^6.4.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -33,6 +35,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
     "@types/node-cron": "^3.0.11",
-    "@types/nodemailer": "^6.4.17"
+    "@types/nodemailer": "^6.4.17",
+    "@prisma/client": "^6.4.1"
   }
 }
