--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -4,10 +4,7 @@
     {
       "src": "dist/index.js",
       "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] },
-      "env": {
-        "PRISMA_CLI_BINARY_TARGETS": "rhel-openssl-3.0.x"
-      }
+      "config": { "includeFiles": ["dist/**"] }
     }
   ],
   "routes": [
